@startuml

class ToDoApp{
    main()
    start()
}

class ToDoAppController{

    SplitPane splitPane

    SplitMenuButton addButton
    MenuItem removeButton
    MenuItem importButton
    MenuItem exportButton
    MenuItem showAllButton
    MenuItem comOnlyButton
    MenuItem incOnlyButton

    DatePicker addDate
    TextField addTaskDetail

    TableView<TaskTDA> tableView
    TableColumn<TaskTDA, String> dateColumn
    TableColumn<TaskTDA, String> textColumn
    TableColumn<TaskTDA, CheckBox> isComCol

    -ObservableList<TaskTDA> listData
    -ObservableList<TaskTDA> toInsert

    +initialize(URL url, ResourceBundle rb)

    +importToDoList()
    +exportToDoList()

    +showAllTasks()
    +showComOnlyTasks()
    +showIncOnlyTasks()

    +addTask()
    +delTask()

    +changeTextCellEvent(editEvent)
    +changeDateCellEvent(editEvent)

    +fileChooserSetup()

    +saveOperation(File fileToSave)
    +loadOperation(File fileToLoad)

    +showHelpScreen()

    +updateListView()
}


class TaskTDA{

    -DateTimeFormatter formatter

    -String date
    -String taskAction
    -CheckBox isComplete

    +String toString()

    +setDate(String date)
    +setTaskAction(String action)
    +setIsComplete()

    +getDate()
    +getTaskAction()
    +getIsComplete()
    +getIsCompleteAsString()
}

javafx.Application <|-- ToDoApp

ToDoApp - ToDoAppController

ToDoAppController <|-- TaskTDA


@enduml